# AI-travel-expense-assistant

./: .gitignore  README.md  docker-compose.yml  makefile  package-lock.json  pyproject.toml
backend/: .dockerignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  sql_travel_buddy.db
backend/docs/: endpoints.yaml
backend/src/travel_buddy/: dependencies.py  main.py
backend/src/travel_buddy/core/: authentication.py  config.py  database.py
backend/src/travel_buddy/models/: trip.py  trip_item.py  user.py
backend/src/travel_buddy/routes/: __init__.py  trip_item.py  trips.py  user.py
backend/src/travel_buddy/schemas/: trip.py  trip_item.py  user.py
backend/src/travel_buddy/services/: trip.py  trip_item.py  user.py
db/cmd/migrations/: 00001_dummy_data.sql  readme.md
docs/: endpoints.yaml
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/recommendations/: route.ts
frontend/app/calendar/: page.tsx
frontend/app/edit-trip/: page.tsx
frontend/app/edit-trip/[id]/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/login/: page.tsx
frontend/app/logout/: page.tsx
frontend/app/new-trip/: page.tsx
frontend/app/recommendations/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/support/: page.tsx
frontend/components/: EditTrip.tsx  ForgotPasswordForm.tsx  FormFieldWrapper.tsx  LoginForm.tsx  LogoutPage.tsx  NotFound.tsx  PasswordRequirements.tsx  SignupForm.tsx  about-us.tsx  footer.tsx  manage-trip-item-modal.tsx  month-calendar.tsx  navbar.tsx  prelogin-home.tsx  recommendation-card.tsx  recommendations.tsx  support-cards.tsx  terms-stuff.tsx  travel-calendar.tsx  trip-item-card.tsx  trip-item-header.tsx  tripCard.tsx
frontend/components/ui/: button.tsx  checkbox.tsx  month-calendar.tsx
frontend/edit-trip/: page.tsx
frontend/hooks/: useAuth.tsx  useTripItems.ts  useTrips.ts
frontend/lib/api/: tripItems.ts
frontend/travel-buddy/: package-lock.json  package.json
frontend/travel-buddy/src/app/: globals.css  page.js  tailwind.config.cjs
frontend/travel-buddy/src/app/calendar/: page.js
frontend/travel-buddy/src/app/forgot-password/: page.js
frontend/travel-buddy/src/app/login/: page.js
frontend/travel-buddy/src/app/new-trip/: page.js
frontend/travel-buddy/src/app/reccomendations/: page.js
frontend/travel-buddy/src/app/signup/: page.js
frontend/travel-buddy/src/components/: navbar.jsx
src/travel_buddy/: __about__.py
tests/: __init__.py
