[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel-buddy"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Theo B", email = "bongolan.t@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fastapi[all]",
    "hatch>=1.14.0",
    "pre-commit>=3.5.0",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.9",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.33.0",
]

[project.urls]
Documentation = "https://github.com/Theo B/travel-buddy#readme"
Issues = "https://github.com/Theo B/travel-buddy/issues"
Source = "https://github.com/Theo B/travel-buddy"

[tool.hatch.version]
path = "src/travel_buddy/__about__.py"

[tool.hatch.envs.default]
# Default environment settings
python = "3.12"
installer = "uv"
path = ".venv"

[tool.hatch.envs.default.scripts]
# Default environment scripts for development
dev = "fastapi dev {args:src/travel_buddy/main.py}"

[tool.hatch.envs.types]
installer = "uv"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/travel_buddy tests}"

[tool.coverage.run]
source_pkgs = ["travel_buddy", "tests"]
branch = true
parallel = true
omit = [
  "src/travel_buddy/__about__.py",
]

[tool.coverage.paths]
travel_buddy = ["src/travel_buddy", "*/travel-buddy/src/travel_buddy"]
tests = ["tests", "*/travel-buddy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
